--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family= italic');
+@import url('https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
+}
+:root{
+    --bg-color:#5d165d;
+    --second-bg-color:#9208c8;
+    --text-color:#73207d;
+    --main-color:#ddbfdd;
 }
 
 body {
@@ -44,7 +54,7 @@ body {
     font-weight: 500;
     margin-left: 35px;
     transition: .3s;
-    box-shadow: 0 0 10px; 
+    
     opacity: 0;
     animation: slideTop .5s ease forwards;
     animation-delay:calc(.2s * var(--i)) ;
@@ -87,6 +97,7 @@ body {
 
 
 .home-content h3 span{
+    position:relative;
     color: yellow; 
     box-shadow: 0 0 10px rgb(224, 206, 15);
     opacity: 0;
@@ -160,6 +171,179 @@ body {
     animation-delay: 2s;
 
 }
+.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second-bg-color);
+}
+
+.about-img img {
+    
+    max-width: 650px;
+
+}
+.heading {
+    text-align: center;
+    font-size: 2rem;
+    margin: 1rem 0rem 3rem;
+}
+.about-content h2 {
+    text-align: left;
+    line-height: 1.2;
+
+}
+span{
+    color: #efe80e;
+}
+.about-content h3 {
+    font-size: 2.6rem;
+}
+.about-content p {
+    font-size: 1.1rem;
+    margin: 2rem 0 3rem;
+}
+.services h2 {
+    margin-bottom: 5rem;
+}
+.services-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+.services-container .services-box {
+    flex: 0 1 15rem;
+    background: var(--second-bg-color);
+    padding: 2rem 1rem 3rem;
+    border-radius: 1rem;
+    text-align: center;
+    border: .1rem solid var(--bg-color);
+    transform: .5s ease;
+}
+.services-container .services-box:hover {
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+.services-box i{
+    font-size: 6rem;
+    color: var(--main-color);
+}
+.services-box h3{
+    font-size: 2.6rem;
+}
+.services-box p{
+    font-size: 1rem;
+    margin: 1rem 0 2rem;
+}
+.portfolio {
+    background: var(--second-bg-color);
+}
+.portfolio h2 {
+    margin-bottom: 4rem;
+}
+.portfolio-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+}
+.portfolio-container .portfolio-box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+
+}
+
+.portfolio-box img {
+   width: 100%;
+   height: 60%;
+   transition: .5s ease;
+}
+.portfolio-box:hover img {
+    transform: scale(1.1);
+
+}
+.portfolio-box .portfolio-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0, .1), var(--main-color));
+    display: flex;
+    justify-self: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+
+.portfolio-box:hover .portfolio-layer {
+    transform: translateY(0);
+
+}
+.portfolio-layer h4 {
+    font-size: 3rem;
+
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 28px;
+    
+    background: rgb(25, 97, 181);
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgb(29, 27, 145);
+    font-size: 16px;
+    color: #420741;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    
+
+}
+.portfolio-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
+.contant h2 {
+    margin-bottom: 3rem;
+}
+.contact-form {
+    max-width: 55rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+.contact-form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+} 
+.contact-form .input-box input,
+.contact-form textarea {
+    width: 100%;
+    padding: 1.3rem;
+    font-size: 1.1rem;
+    color: var(--text-color);
+    background: var(--second-bg-color);
+    border-radius: .6rem;
+    margin: .6rem 0;
+
+}
+
+
 
 /*KEYRAMES ANIMATION*/
 @keyframes slideRight {
@@ -220,4 +404,3 @@ body {
     }
 
 }
-
